--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@astrojs/mdx": "^1.1.4",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
-    "astro": "^3.5.3"
+    "astro": "^3.5.3",
+    "three": "^0.158.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
