--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
     "astro": "^3.5.3",
+    "astro-seo": "^0.8.0",
     "three": "^0.158.0"
   },
   "devDependencies": {
